// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle debe de mostrar el componente con el titulo personalizado 1`] = `
<span
  className="productDescription cutom-class"
>
  test
</span>
`;

exports[`ProductTitle debe de mostrar el componente con el titulo personalizado 2`] = `
<div
  className="productCard "
>
  <span
    className="productDescription cutom-class"
  >
    test
  </span>
</div>
`;
